--- a/client/src/pages/Users/ProfilePage/DetailsUsersPage.css
+++ b/client/src/pages/Users/ProfilePage/DetailsUsersPage.css
@@ -34,7 +34,7 @@
 .card-back {
     transform: rotateY(180deg);
     text-align: center;
-    background-color: #f0f0f0;
+  background-image:url("../../../..") ;
     padding: 10px;
     box-sizing: border-box;
     display: flex;
