--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,36 @@
 body {
-  font-family: sans-serif;
+  font-family: sans-serif !important;
   font-weight: 100;
+  background-image: url('../public/thumb_259002_contenidos_optimized.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+}
+
+body::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 200%;
+  z-index: -1;
+  background-image: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: inherit;
+  transform: scale(0.5);
+  transform-origin: top left;
+}
+
+
+.dark {
+  color: white;
 }
 
 .dark {
-  background-color: black;
+
   color: white;
 }
