--- a/client/src/components/UserComponents/UserList/UserCard.css
+++ b/client/src/components/UserComponents/UserList/UserCard.css
@@ -12,6 +12,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    color: white;
 }
 
 .user-avatar {
@@ -22,11 +24,7 @@
 }
 
 .user-name {
-    font-size: 18px;
+    font-size: 26px;
     margin: 0;
-}
 
-.user-about {
-    font-size: 14px;
-    color: #666;
 }
