--- a/client/src/components/UserComponents/UserList/UserList.css
+++ b/client/src/components/UserComponents/UserList/UserList.css
@@ -1,15 +1,5 @@
-/* UserList.css */
 .user-list-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 70vh;
-    /* Establece la altura para ocupar toda la pantalla */
-    margin: 0;
-    /* Elimina el margen exterior predeterminado */
-    overflow: hidden;
-    /* Evita la barra de desplazamiento vertical */
+    margin: 20px;
 }
 
 .user-list-header {
@@ -17,43 +7,22 @@
     margin-bottom: 20px;
 }
 
-.user-list-carousel {
-    width: 100%;
-    /* Ocupa todo el ancho disponible */
-    max-width: 100%;
-    /* Evita que el contenido se desborde */
+.user-card-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.custom-next-arrow,
-.custom-prev-arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    border: none;
+.user-card {
+    width: calc(33.33% - 20px);
+    margin: 10px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    z-index: 1;
+    transition: transform 0.8s;
 }
 
-.custom-next-arrow {
-    right: 20px;
-}
-
-.custom-prev-arrow {
-    left: 20px;
-}
-
-.custom-next-arrow:hover,
-.custom-prev-arrow:hover {
-    background-color: #0056b3;
-}
-
-.arrow-label {
-    display: block;
-    font-size: 14px;
-    text-align: center;
-    margin-top: 5px;
+.user-card:hover {
+    transform: scale(1.07);
 }
