--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,12 +1,14 @@
-footer{
+footer {
     background-color: black;
     color: white;
     font-size: .6em;
     position: fixed;
-    padding: 7px;
+    padding: 8px;
     width: 100%;
     bottom: 0;
     left: 0;
     text-align: center;
-    
+    font-size: small;
+
+
 }
